--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.75.2
+beanie==1.11.0
+fastapi~=0.76.0
+motor~=3.0.0
 pydantic==1.9.0
-motor~=2.5.1
-python-dotenv~=0.20.0
+python-dotenv==0.20.0
