--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 beanie==1.11.0
-fastapi~=0.76.0
-motor~=3.0.0
+fastapi==0.75.2
+motor==2.5.1
 pydantic==1.9.0
 python-dotenv==0.20.0
+
+sendgrid~=6.9.7
